# gh-stars-organizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: index.html  styles.css
examples/: config.yaml
gh_stars_organizer/: __init__.py  cache.py  classifier.py  cli.py  config.py  embeddings.py  github_client.py  insights.py  models.py  organizer.py  tui_app.py  utils.py
tests/: test_cache.py  test_classifier.py  test_config.py  test_embeddings.py  test_github_client.py
